[package]
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
categories = ["embedded-hal", "hardware-support", "no-std"]
edition = "2018"
name = "ocm3"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal/"
optional = true

[features]
default = ["stm32f103"]

stm32 = []
stm32f0 = ["stm32"]
stm32f1 = ["stm32", "stm32f1xx-hal"]
stm32f2 = ["stm32"]
stm32f3 = ["stm32"]
stm32f4 = ["stm32"]
stm32f7 = ["stm32"]
stm32l0 = ["stm32"]
stm32l1 = ["stm32"]
stm32l4 = ["stm32"]

stm32f0x0 = ["stm32f0"]
stm32f0x1 = ["stm32f0"]
stm32f0x2 = ["stm32f0"]
stm32f0x8 = ["stm32f0"]

stm32f030 = ["stm32f0x0"]
stm32f070 = ["stm32f0x0"]
stm32f031 = ["stm32f0x1"]
stm32f051 = ["stm32f0x1"]
stm32f071 = ["stm32f0x1"]
stm32f091 = ["stm32f0x1"]
stm32f042 = ["stm32f0x2"]
stm32f072 = ["stm32f0x2"]
stm32f038 = ["stm32f0x8"]
stm32f048 = ["stm32f0x8"]
stm32f058 = ["stm32f0x8"]
stm32f078 = ["stm32f0x8"]
stm32f098 = ["stm32f0x8"]

stm32f100 = ["stm32f1", "stm32f1xx-hal/stm32f100"]
stm32f101 = ["stm32f1", "stm32f1xx-hal/stm32f101"]
stm32f102 = ["stm32f1"]
stm32f103 = ["stm32f1", "stm32f1xx-hal/stm32f103"]
stm32f107 = ["stm32f1"]

stm32f105 = ["stm32f107"]

stm32f215 = ["stm32f2"]
stm32f217 = ["stm32f2"]

stm32f205 = ["stm32f215"]
stm32f207 = ["stm32f217"]

stm32f301 = ["stm32f3"]
stm32f302 = ["stm32f3"]
stm32f303 = ["stm32f3"]
stm32f373 = ["stm32f3"]
stm32f3x4 = ["stm32f3"]
stm32f3x8 = ["stm32f3"]

stm32f334 = ["stm32f3x4"]
stm32f318 = ["stm32f3x8"]
stm32f328 = ["stm32f3x8"]
stm32f358 = ["stm32f3x8"]
stm32f378 = ["stm32f3x8"]
stm32f398 = ["stm32f3x8"]

stm32f401 = ["stm32f4"]
stm32f405 = ["stm32f4"]
stm32f407 = ["stm32f4"]
stm32f410 = ["stm32f4"]
stm32f411 = ["stm32f4"]
stm32f412 = ["stm32f4"]
stm32f413 = ["stm32f4"]
stm32f427 = ["stm32f4"]
stm32f429 = ["stm32f4"]
stm32f446 = ["stm32f4"]
stm32f469 = ["stm32f4"]

stm32f415 = ["stm32f405"]
stm32f417 = ["stm32f407"]
stm32f423 = ["stm32f413"]
stm32f437 = ["stm32f427"]
stm32f439 = ["stm32f429"]
stm32f479 = ["stm32f469"]

stm32f7x2 = ["stm32f7"]
stm32f7x3 = ["stm32f7"]
stm32f7x5 = ["stm32f7"]
stm32f7x6 = ["stm32f7"]
stm32f7x7 = ["stm32f7"]
stm32f7x9 = ["stm32f7"]

stm32f722 = ["stm32f7x2"]
stm32f732 = ["stm32f7x2"]
stm32f723 = ["stm32f7x3"]
stm32f733 = ["stm32f7x3"]
stm32f745 = ["stm32f7x5"]
stm32f765 = ["stm32f7x5"]
stm32f746 = ["stm32f7x6"]
stm32f756 = ["stm32f7x6"]
stm32f767 = ["stm32f7x7"]
stm32f777 = ["stm32f7x7"]
stm32f769 = ["stm32f7x9"]
stm32f778 = ["stm32f7x9"]
stm32f779 = ["stm32f7x9"]

stm32l0x1 = ["stm32l0"]
stm32l0x2 = ["stm32l0"]
stm32l0x3 = ["stm32l0"]

stm32l011 = ["stm32l0x1"]
stm32l021 = ["stm32l0x1"]
stm32l031 = ["stm32l0x1"]
stm32l041 = ["stm32l0x1"]
stm32l051 = ["stm32l0x1"]
stm32l071 = ["stm32l0x1"]
stm32l081 = ["stm32l0x1"]
stm32l052 = ["stm32l0x2"]
stm32l062 = ["stm32l0x2"]
stm32l072 = ["stm32l0x2"]
stm32l082 = ["stm32l0x2"]
stm32l053 = ["stm32l0x3"]
stm32l063 = ["stm32l0x3"]
stm32l073 = ["stm32l0x3"]
stm32l083 = ["stm32l0x3"]

stm32l100 = ["stm32l1"]
stm32l151 = ["stm32l1"]
stm32l162 = ["stm32l1"]

stm32l152 = ["stm32l151"]

stm32l4x1 = ["stm32l4"]
stm32l4x2 = ["stm32l4"]
stm32l4x3 = ["stm32l4"]
stm32l4x5 = ["stm32l4"]
stm32l4x6 = ["stm32l4"]

stm32l431 = ["stm32l4x1"]
stm32l451 = ["stm32l4x1"]
stm32l471 = ["stm32l4x1"]
stm32l432 = ["stm32l4x2"]
stm32l442 = ["stm32l4x2"]
stm32l452 = ["stm32l4x2"]
stm32l462 = ["stm32l4x2"]
stm32l433 = ["stm32l4x3"]
stm32l443 = ["stm32l4x3"]
stm32l475 = ["stm32l4x5"]
stm32l476 = ["stm32l4x6"]
stm32l486 = ["stm32l4x6"]
stm32l496 = ["stm32l4x6"]
stm32l4A6 = ["stm32l4x6"]
